# browsy

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __main__.py  data.py  jobs.py  server.py  worker.py
app/jobs/: __init__.py  base.py  pdf.py  screenshot.py
docker/server/: Dockerfile
examples/jobs/: pdf.py  screenshot.py
quickstart/: docker-compose.yml
quickstart/jobs/: pdf.py  screenshot.py
scripts/: get.sh
src/: __main__.py  database.py  server.py  worker.py
src/browserq/: __init__.py  __main__.py  database.py  jobs.py  server.py  worker.py
src/browsy/: __init__.py  __main__.py  _database.py  _jobs.py  _server.py  _worker.py  database.py  server.py  worker.py
src/browsy/templates/: base.html  jobs.html
src/jobs/: __init__.py  base.py  pdf.py  screenshot.py
