[project]
name = "browsy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "click>=8.1.7",
    "fastapi>=0.115.6",
    "playwright>=1.49.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[project.scripts]
browsy = "browsy.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browsy"]
