[project]
name = "browsy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.7",
    "requests>=2.32.3",
    "playwright>=1.49.1",
    "pydantic>=1.7.4",
]

[project.optional-dependencies]
server = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
]
worker = [
    "aiosqlite>=0.20.0",
]
all = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
]

[project.scripts]
browsy = "browsy.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browsy"]
